Fix text not wraping on mobile

--- a/style.css
+++ b/style.css
@@ -51,11 +51,13 @@ ul {
     font-weight: bold;
     color: #f9faf8;
     margin: 20px;
+    flex-wrap: wrap;
 }
 .subtext {
     font-size: 18px;
     color: #e5e7eb;
     margin: 20px;
+    flex-wrap: wrap;
 }
 button {
     background: #3882f6;
